set fixed width on mobile

--- a/src/components/ProjectImage/ProjectImage.module.css
+++ b/src/components/ProjectImage/ProjectImage.module.css
@@ -3,3 +3,11 @@
   border-radius: 24px;
   max-width: 100%;
 }
+
+@media (max-width: 1000px) {
+  .root {
+    width: 100%;
+    object-fit: contain;
+    height: auto;
+  }
+}
